glyphicon align fix

--- a/src/css/ui.scss
+++ b/src/css/ui.scss
@@ -48,3 +48,12 @@
         margin-left: 20px;
     }
 }
+
+button.btn-lg {
+    .glyphicon {
+        margin-right: 3px;
+        vertical-align: middle;
+    }
+
+    vertical-align: middle;
+}
